[package]
name = "httprove"
version = "0.3.0"
edition = "2024"
description = "HTTP(S) service diagnostics for SREs: per-phase latency waterfall, certificate inspection, continuous ping-style probing, CLI + TUI"
license = "MIT"

[profile.release]
lto = "thin"
strip = true

[dependencies]
anyhow = "1.0.102"
bytes = "1.12.0"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
flate2 = "1.1.9"
http = "1.4.2"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "tokio"] }
ratatui = { version = "0.30.1", default-features = false, features = ["crossterm", "underline-color", "layout-cache"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8.4"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
tar = "0.4.46"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "signal", "io-util", "sync"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging", "tls12"] }
tokio-util = "0.7.18"
url = "2.5.8"
x509-parser = "0.18.1"
